fix ghost horizontal scroll on windows

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,6 @@
 
 body {
   margin: 0;
-  min-width: 100vw;
   min-height: 100vh;
   background-color: var(--bg-1);
   color: var(--text);
